scroll bar customize done

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap');
+
+
 @tailwind base;
+
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: white;
+  }
+  
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 2px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #3F6CEE;
+    border-radius: 10px;
+    border: 3px solid #3F6CEE;
+  }
+
+
 @tailwind components;
 @tailwind utilities;
+
+
+
 
 @layer components{
     .appContainer{
@@ -17,3 +47,6 @@
     font-family: "Gobold";
     src: url('./assets/font/GoboldBold.otf');
 }
+html {
+    scroll-behavior: smooth;
+  }
