--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
         @apply max-w-[1920px] px-5 md:px-[40px] lg:px-[70px] xl:px-[100px] mx-auto
     }
     .appBtn{
-        @apply bg-[#3F6CEE] text-white font-semibold font-Messiri px-4 py-2  flex justify-center items-center hover:bg-white hover:text-[#3F6CEE] duration-200
+        @apply bg-[#3F6CEE] text-center text-white font-semibold font-Messiri px-4 py-2  flex justify-center items-center hover:bg-white hover:text-[#3F6CEE] duration-200
     }
 }
 
