--- a/src/index.css
+++ b/src/index.css
@@ -9,17 +9,17 @@
     scrollbar-width: thin;
     scrollbar-color: white;
   }
-  
+
   /* Chrome, Edge, and Safari */
   *::-webkit-scrollbar {
     width: 8px;
   }
-  
+
   *::-webkit-scrollbar-track {
     background: #555454;
     border-radius: 2px;
   }
-  
+
   *::-webkit-scrollbar-thumb {
     background-color: white;
     border-radius: 10px;
@@ -50,3 +50,15 @@
 html {
     scroll-behavior: smooth;
   }
+
+body {
+    /* fix for iOS Safari */
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    -o-transform: translate3d(0,0,0);
+    background-position: center bottom;
+    background-size: cover;
+    background-attachment: fixed;
+}
