--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,14 @@ html {
     scroll-behavior: smooth;
   }
 
-body {
-    /* fix for iOS Safari */
-    transform: translate3d(0,0,0);
-    -webkit-transform: translate3d(0,0,0);
-    -moz-transform: translate3d(0,0,0);
-    -ms-transform: translate3d(0,0,0);
-    -o-transform: translate3d(0,0,0);
-    background-position: center bottom;
-    background-size: cover;
-    background-attachment: fixed;
-}
+/*body {*/
+/*    !* fix for iOS Safari *!*/
+/*    transform: translate3d(0,0,0);*/
+/*    -webkit-transform: translate3d(0,0,0);*/
+/*    -moz-transform: translate3d(0,0,0);*/
+/*    -ms-transform: translate3d(0,0,0);*/
+/*    -o-transform: translate3d(0,0,0);*/
+/*    background-position: center bottom;*/
+/*    background-size: cover;*/
+/*    background-attachment: fixed;*/
+/*}*/
